TestCases/valid-graphs/tex/graph.tex
\begin{tikzpicture}[every label/.style={circle,fill=red},every label/.style={circle,rectangle},every node/.style={circle},rectangle,fill=red!60, inner sep = 10]
    \node (d) [fill=red!60,circle] at (12,7) {};
    \node (a) [fill=black,rectangle] at (2*360/5:10) {};
    \node [fill=blue!60,ellipse] at (13,3) {};
    \node (c) [fill=green,circle] at (15,10) {};

    \draw [<-] (5,5) -- (a) -- (9,9) -- (5,9);

\end{tikzpicture}