TestCases/invalid-graphs/tex/SyntaxError_1.tex
\begin{tikzpicture}
  	  
    \node (b1)[fill=red!60] at (0,0) {};
    \node (b2)[fill=red!60] at (1,0) {};
    \draw (b1) -- (b2);
    \node (b1)[fill=blue!60] at (2,2)
    \draw (b1) -- (b2);
 
\end{tikzpicture}
